# debug-tools

./: Cargo.toml  README.md
debug-tools/: Cargo.toml
debug-tools/examples/: aa-bres-float.rs  aa-bres.rs  aa-wu.rs  aa.rs  arc.rs  circle-distance.rs  circle.rs  line-distance.rs  line-intersection.rs  line-no-aa-parallel.rs  line-parallel.rs  line-perp.rs  line.rs  perp-line-rendering.rs  polyline.rs  rectangle-intersection.rs  sector.rs  text-decoration.rs
framework/: Cargo.toml
framework/src/: draw.rs  lib.rs  menu.rs  parameter.rs
