[workspace]
members = [
    "framework",
    "debug-tools",
]

[workspace.dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.0"

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git"}
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git"}
# embedded-graphics = { path = "../embedded-graphics"}
# embedded-graphics-core = { path = "../embedded-graphics/core"}
