[package]
name = "line"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
publish = false

[dependencies]
framework = { path = "../framework" }
embedded-graphics = { path="../../embedded-graphics" }
embedded-graphics-simulator = { path="../../simulator" }
sdl2 = "0.32.2"

[dev-dependencies]
micromath = "1.1.0"

