[package]
name = "line"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
publish = false

[dependencies]
framework = { path = "../framework" }
embedded-graphics = { version = "0.7.1", path = "../../embedded-graphics" }
embedded-graphics-simulator = { version = "0.3.0", path = "../../simulator" }
